refactor(Injectable): 将属于它的方法搬移进来